[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TEAM2556-Python"
version = "0.1.0"
description = "FRC Robot Project using Python, PyRobot, and WPILib"
authors = [
    { name="Team2556", email="team2556@gmail.com" }
]
dependencies = [
    "wpilib", #really need?
    "robotpy",
    "mypy",
    #"robotpy-pathplannerlib"
    # could not find "ctre",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2024.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    "all",
    # "apriltag",
    # "commands2",
    # "cscore",
    # "navx",
    "pathplannerlib",
    "phoenix5",
    "phoenix6",
    # "photonvision",
    # "playingwithfusion",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install on the roboRIO
requires = [
    'numpy',
    #'scipy'
    # 'pynetworktables',
    'pyfrc',
    # 'robotpy-hal-sim',
    #'robotpy-wpilib',
    #'robotpy-wpiutil',
    #'robotpy-ctre',
    #'robotpy-rev',
        
    # 'xarray',

]